--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,4 @@
 ###############
 
 token: "Nzg0NTgzMTQ5NzYxMDY5MDc2.X8rZ_w.39zjpLLJeIwE----ptR3N4rmg2U"
+description: "Construindo um novo planeta..."
