--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>com.github.DV8FromTheWorld</groupId>
             <artifactId>JDA</artifactId>
-            <version>master-v3.7.1-gc11cec4-890</version>
+            <version>v5.0.0-alpha.11</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
