Changes by Gusttavo

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,3 +4,6 @@
 
 token: "Nzg0NTgzMTQ5NzYxMDY5MDc2.X8rZ_w.39zjpLLJeIwE----ptR3N4rmg2U"
 description: "Construindo um novo planeta..."
+
+channels:
+  log: "736398288936370177"
