SQLite.java adicionado getAllTickets
Messages.java Adicionado Title and Lore para os items "NEXT PAGE" e "PREVIOUS PAGE"

config.yml Adicionado Title and lore para os items "Next Page" e "Previous Page"

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,6 +27,12 @@ messages:
         ticketadd_lore:
           - " "
           - "&bAbra um ticket"
+      item_next_page:
+        next_page_title: "Proxima Pagina"
+        next_page_lore: "teste1"
+      item_previous_page:
+        previous_page_title: "Pagina Anterior"
+        previous_page_lore: "teste2"
       tickets_item:
         tickets_title: "&eTicket #{ticketid}"
         tickets_lore:
