--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,8 +2,14 @@ name: ThornyaBot
 version: '${project.version}'
 main: thornyabot.thornyabot.ThornyaBot
 api-version: 1.18
-authors: [ Gusttavo13, _Vulkano_ ]
+authors:
+  - "Gusttavo13"
+  - "_Vulkano_"
 description: Discord Integration JDA
 commands: 
   tickets:
     description: "Tickest do Bot"
+  verificar:
+    description: "Sistema de verificação"
+    aliases:
+      - "verify"
