Bot Finalizado com sucesso
Mysql.java feito e conectado, sistema de verificacao

Images.java Sistema de codigo por imagem
Need VPS

Tickets finalizado e consertados

Comandos Registrados

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,15 @@
 token: "Nzg0NTgzMTQ5NzYxMDY5MDc2.X8rZ_w.39zjpLLJeIwE----ptR3N4rmg2U"
 description: "Construindo um novo planeta..."
 
+mysql:
+  enable: true
+  database: "minecraft"
+  host: "localhost"
+  username: "root"
+  password: ""
+  port: 3306
+
+
 channels:
   log: "736398288936370177"
 
